# rmenu

./: Cargo.toml  README.md
config/: style.css
src/: fs.rs  gui.rs  main.rs  rmenu.rs
src/list_entry/: imp.rs  mod.rs
src/modes/: dmenu.rs  mod.rs  text_select.rs
