[package]
name = "rmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
faccess = "0.2.4"
freedesktop_entry_parser = "1.3.0"
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_10"] }
once_cell = "1.17.1"
